Version 1.0.4 (2022-03-30)
- Use max version of interfaces for backend version

Version 1.0.3 (2022-03-30)
- Revert to XmlRPC getVersion for CCU

Version 1.0.2 (2022-03-29)
- Revert to XmlRPC getParamsetDescription for CCU

Version 1.0.1 (2022-03-29)
- Add central_id for uniqueness of heating groups, sysvars and hub

Version 1.0.0 (2022-03-28)
- Simplify json usage
- Move json methods to json client
- Make json client independent from central config
- Add get_serial to validate
- Use serial for sysvar unique_ids
- Rename domain for test and example from hahm to homematicip_local

Version 0.38.5 (2022-03-22)
- Use interface_id for interface events
- Add support for color temp dimmer

Version 0.38.4 (2022-03-21)
- Fix interface name for BidCos-Wired

Version 0.38.3 (2022-03-20)
- Add check for available API method to identify BidCos Wired
- Cleanup backend identification

Version 0.38.2 (2022-03-20)
- Catch SysVar parsing exceptions

Version 0.38.1 (2022-03-20)
- Fix lock/unlock for HM-Sec-Key

Version 0.38.0 (2022-03-20)
- Add central validation
- Add jso_rpc.post_script

Version 0.37.7 (2022-03-18)
- Add additional system_listMethods to avoid errors on CCU

Version 0.37.6 (2022-03-18)
- Add JsonRPC.Session.logout before central stop to avoid warn logs at CCU.

Version 0.37.5 (2022-03-18)
- Add api for available interfaces
- Send event if interface is not available
- Don't block available interfaces

Version 0.37.4 (2022-03-17)
- Fix reload paramset
- Fix value converter

Version 0.37.3 (2022-03-17)
- Cleanup caching code

Version 0.37.2 (2022-03-17)
- Use homematic script to fetch initial data for CCU/HM

Version 0.37.1 (2022-03-16)
- Add semaphore(1) to improve cache usage (less api calls)

Version 0.37.0 (2022-03-15)
- Avoid unnecessary prefetches
- Fix JsonRPC Session handling
- Rename NamesCache to DeviceDetailsCache
- Move RoomCache to DeviceDetailsCache
- Move hm value converter to helpers
- Use JSON RPC for get_value, get_paramset, get_paramset_description